[package]
name = "anyhost-csi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0"
clap = { version = "4", features = ["derive"] }
duct = "0"
futures = "0"
k8s-openapi = { version = "0", features = ["v1_31", "schemars"] }
kube = { version = "0", features = ["runtime"] }
prost = "0"
prost-types = "0"
serde_yaml = "0"
time = { version = "0", features = ["parsing", "formatting"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0", features = ["full"] }
tonic = { version = "0", features = ["tls"] }
tower = "0"
tracing = "0"
tracing-subscriber = "0"

[build-dependencies]

anyhow = "1"
tonic-build = "0"

[package.metadata.cargo-machete]
ignored = ["prost", "prost-types"]
